--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,2 +1,3 @@
 before_install:
-  - yes | sdkmanager --uninstall "ndk-bundle" | sdkmanager --install "ndk;26.0.10404224"
+  - yes | $ANDROID_HOME/tools/bin/sdkmanager --install "ndk;26.0.10404224"
+  - export NDK_HOME=$ANDROID_HOME/ndk/26.0.10404224
