--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ compose = "1.6.0-alpha01"
 composeM3 = "1.2.0-alpha03"
 ktx = "1.12.0-alpha05"
 
-agp = "8.0.0"
+agp = "8.1.0-rc01"
 kotlin = "1.9.0"
 
 composeCompiler = "1.5.0"
