Add DSF and DSDIFF support, see https://github.com/taglib/taglib/commit/d71398c953bb80377a861d079e7ab74ab18954f3

--- a/lib/src/main/cpp/CMakeLists.txt
+++ b/lib/src/main/cpp/CMakeLists.txt
@@ -22,6 +22,8 @@ target_include_directories(tag PUBLIC
         taglib/taglib
         taglib/taglib/ape
         taglib/taglib/asf
+        taglib/taglib/dsdiff
+        taglib/taglib/dsf
         taglib/taglib/flac
         taglib/taglib/it
         taglib/taglib/mod
