Remove empty taglib_config.h

--- a/lib/src/main/cpp/CMakeLists.txt
+++ b/lib/src/main/cpp/CMakeLists.txt
@@ -17,35 +17,35 @@ set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--gc-sections")
 
 add_subdirectory(taglib)
 
-target_include_directories(tag PUBLIC
-        taglib/3rdparty
-        taglib/taglib
-        taglib/taglib/ape
-        taglib/taglib/asf
-        taglib/taglib/dsdiff
-        taglib/taglib/dsf
-        taglib/taglib/flac
-        taglib/taglib/it
-        taglib/taglib/mod
-        taglib/taglib/mp4
-        taglib/taglib/mpc
-        taglib/taglib/mpeg
-        taglib/taglib/mpeg/id3v1
-        taglib/taglib/mpeg/id3v2
-        taglib/taglib/mpeg/id3v2/frames
-        taglib/taglib/ogg
-        taglib/taglib/ogg/flac
-        taglib/taglib/ogg/opus
-        taglib/taglib/ogg/speex
-        taglib/taglib/ogg/vorbis
-        taglib/taglib/riff
-        taglib/taglib/riff/aiff
-        taglib/taglib/riff/wav
-        taglib/taglib/s3m
-        taglib/taglib/toolkit
-        taglib/taglib/trueaudio
-        taglib/taglib/wavpack
-        taglib/taglib/xm)
+include_directories(
+        ${taglib_SOURCE_DIR}/taglib
+        ${taglib_SOURCE_DIR}/taglib/toolkit
+        ${taglib_SOURCE_DIR}/taglib/asf
+        ${taglib_SOURCE_DIR}/taglib/mpeg
+        ${taglib_SOURCE_DIR}/taglib/ogg
+        ${taglib_SOURCE_DIR}/taglib/ogg/flac
+        ${taglib_SOURCE_DIR}/taglib/flac
+        ${taglib_SOURCE_DIR}/taglib/mpc
+        ${taglib_SOURCE_DIR}/taglib/mp4
+        ${taglib_SOURCE_DIR}/taglib/ogg/vorbis
+        ${taglib_SOURCE_DIR}/taglib/ogg/speex
+        ${taglib_SOURCE_DIR}/taglib/ogg/opus
+        ${taglib_SOURCE_DIR}/taglib/mpeg/id3v2
+        ${taglib_SOURCE_DIR}/taglib/mpeg/id3v2/frames
+        ${taglib_SOURCE_DIR}/taglib/mpeg/id3v1
+        ${taglib_SOURCE_DIR}/taglib/ape
+        ${taglib_SOURCE_DIR}/taglib/wavpack
+        ${taglib_SOURCE_DIR}/taglib/trueaudio
+        ${taglib_SOURCE_DIR}/taglib/riff
+        ${taglib_SOURCE_DIR}/taglib/riff/aiff
+        ${taglib_SOURCE_DIR}/taglib/riff/wav
+        ${taglib_SOURCE_DIR}/taglib/mod
+        ${taglib_SOURCE_DIR}/taglib/s3m
+        ${taglib_SOURCE_DIR}/taglib/it
+        ${taglib_SOURCE_DIR}/taglib/xm
+        ${taglib_SOURCE_DIR}/taglib/dsf
+        ${taglib_SOURCE_DIR}/taglib/dsdiff
+)
 
 add_library(${CMAKE_PROJECT_NAME} SHARED
         tag.cpp)
