--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ composeM3 = "1.2.0-alpha03"
 ktx = "1.12.0-alpha05"
 serialization = "1.5.1"
 
-agp = "8.1.0-rc01"
+agp = "8.1.0"
 kotlin = "1.9.0"
 
 composeCompiler = "1.5.0"
