--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,13 @@
 [versions]
-activity = "1.8.0-alpha06"
-compose = "1.6.0-alpha01"
-composeM3 = "1.2.0-alpha03"
-ktx = "1.12.0-alpha05"
-serialization = "1.5.1"
-
 agp = "8.1.0"
 kotlin = "1.9.0"
+composeCompiler = "1.5.1"
 
-composeCompiler = "1.5.0"
+activity = "1.8.0-alpha06"
+compose = "1.6.0-alpha03"
+composeM3 = "1.2.0-alpha05"
+ktx = "1.12.0-rc01"
+serialization = "1.5.1"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity" }
